- removed most of deprecated stuff, both from the project and the JDK itself - applied some Idea suggestions - switched to gradle - using platform and catalog via composite build