@@ -34,6 +34,7 @@ package net.imagej.updater;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Collection;
@@ -84,8 +85,8 @@ public class XMLFileDownloader extends AbstractProgressable {
 			addItem(title);
 			setCount(current, total);
 			try {
-				final URLConnection connection =
-					files.util.openConnection(new URL(updateSite.getURL() + UpdaterUtil.XML_COMPRESSED));
+				final URI uri = new URI(updateSite.getURL() + UpdaterUtil.XML_COMPRESSED);
+				final URLConnection connection = files.util.openConnection(uri.toURL());
 				final long lastModified = connection.getLastModified();
 				final int fileSize = connection.getContentLength();
 				final InputStream in =
